# clitox

./: .kdev_include_paths  CONTRIBUTING.md  COPYING  HISTORY  Makefile  Makefile.am  Makefile.in  README.md  c-toxcore.cpp  c-toxcore.h  clientlist.cpp  clientlist.h  clitox-config.cpp  clitox-config.h  clitox.cpp  clitox.h  config.h  config.h.in  config.status  configure  configure.ac  intenttemplates.json  libtool  local.json  nodes.tox.chat.json  toxclient.cpp  toxclient.h  toxmessage.cpp  toxmessage.h  toxnodejson.cpp  toxnodejson.h  toxreceiver.h  toxreceiverjava.cpp  toxreceiverjava.h  toxreceiverstream.cpp  toxreceiverstream.h  variables.json
autom4te.cache/: output.0  requests  traces.0  traces.1
intent/: fmtit-config.cpp  fmtit-config.h  fmtit.cpp  fmtit.h  intentformatter.cpp  intentformatter.h  intenttemplate.cpp  intenttemplate.h  intenttemplatejson.cpp  intenttemplatejson.h  variable.cpp  variable.h  variablecolumn.cpp  variablecolumn.h
win/clitox/: clitox.sln  clitox.vcxproj  clitox.vcxproj.filters
